added documentation for escape key

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -293,6 +293,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
             <th><kbd>Enter</kbd><br><kbd>Space</kbd></th>
             <td>Toggle the pressed state of the button.</td>
           </tr>
+          <tr data-test-id="toolbar-toggle-esc">
+            <th><kbd>ESC</kbd></th>
+            <td>
+              Hides tooltip.
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
@@ -341,6 +347,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
                 <li>Moves focus to the previous radio button.</li>
                 <li>If the radio button has focus, focus moves to the last radio button.</li>
               </ul>
+            </td>
+          </tr>
+          <tr data-test-id="toolbar-radio-esc">
+            <th><kbd>ESC</kbd></th>
+            <td>
+              Hides tooltip.
             </td>
           </tr>
         </tbody>
