--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -651,6 +651,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
             <td><code>button</code></td>
             <td>Indicates the button is a toggle and that the styling controlled by the button has <strong>NOT</strong> been applied.</td>
           </tr>
+          <tr data-test-id="toolbar-button-aria-hidden">
+            <td></td>
+            <th scope="row"><code>aria-hidden="true"</code></th>
+            <td><code>span</code></td>
+            <td>Hides the icon character from being included in the accessible name.</td>
+          </tr>
         </tbody>
       </table>
     </section>
@@ -717,6 +723,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
                 <li>All radio buttons in the group, except for one,  have <code>aria-checked</code> set to <code>false</code>.</li>
               </ul>
             </td>
+          </tr>
+          <tr data-test-id="toolbar-radio-aria-hidden">
+            <td></td>
+            <th scope="row"><code>aria-hidden="true"</code></th>
+            <td><code>span</code></td>
+            <td>Hides the icon character from being included in the accessible name.</td>
           </tr>
         </tbody>
       </table>
