add disclosure nav tests

--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -157,7 +157,7 @@
               Moves keyboard focus between top-level buttons, and into any open menu
           </td>
         </tr>
-        <tr data-test-id="key-enter-or-space">
+        <tr data-test-id="key-enter-space">
           <th>
             <kbd>Space</kbd> or <br />
             <kbd>Enter</kbd>
@@ -167,7 +167,7 @@
               which toggles the visibility of the dropdown menu.
           </td>
         </tr>
-        <tr data-test-id="key-arrow-prev">
+        <tr data-test-id="key-escape">
           <th>
             <kbd>Escape</kbd>
           </th>
@@ -175,7 +175,7 @@
               Closes the open dropdown menu
           </td>
         </tr>
-        <tr data-test-id="key-arrow-prev">
+        <tr data-test-id="key-arrows">
           <th>
             <kbd>Arrow keys</kbd>
           </th>
@@ -183,7 +183,7 @@
               Moves focus between the top-level disclosure buttons.
           </td>
         </tr>
-        <tr data-test-id="key-arrow-prev">
+        <tr data-test-id="key-home-end">
           <th>
             <kbd>Home / End</kbd>
           </th>
