--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4676,6 +4676,11 @@ However, most authors do not need detailed understanding of the algorithms since
             Specifying both is potentially useful if there is a need to provide a fallback description for browsers and assistive technologies that do not yet support <code>aria-details</code>.
           </p>
         </section>
+        
+        <section id="describing_with_fallback">
+          <h5>Fallback Descriptions Derived from Titles and Placeholders</h5>
+          <p>To-do: write this section.</p>
+        </section>
       </section>
 
       <section id="description_calculation">
